--- a/src/components/Dialogs/MessageItem/MessageItem.module.css
+++ b/src/components/Dialogs/MessageItem/MessageItem.module.css
@@ -1,6 +1,6 @@
 .message_item:nth-child(even) {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: flex-end;
 }
 
